[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow"
version = "0.1.0"
description = "3D Bin Packing with Jumanji + gfnx (Trajectory Balance)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "jax[cuda12]>=0.5.0",
  "chex>=0.1.89",
  "equinox>=0.11.11",
  "optax>=0.2.4",
  "dm-tree==0.1.9",
  "jumanji @ git+https://github.com/instadeepai/jumanji.git@main",
  "gfnx @ git+https://github.com/d-tiapkin/gfnx.git@main",
  "nvitop",
]

[tool.setuptools]
py-modules = ["env_wrapper", "train"]

[tool.ruff]
line-length = 100

'target-version' = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
