[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow"
version = "0.1.0"
description = "3D Bin Packing with Jumanji + gfnx (Trajectory Balance)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "jax[cuda12]==0.7.1",
  "numpy==1.26.4",
  "chex==0.1.91",
  "equinox==0.13.0",
  "optax==0.2.7",
  "tensorboardX>=2.6.2",
  "PyYAML>=6.0",
  "dm-tree==0.1.9",
  "jumanji @ git+https://github.com/instadeepai/jumanji.git@9d335e443433f8f76bb7bd0b7387fef9ffe8a61e",
  "gfnx @ git+https://github.com/d-tiapkin/gfnx.git@4bbd26ae22437a218e69214a917eb039d1c529f4",
  "nvitop",
]

[tool.setuptools]
py-modules = ["env_wrapper", "train", "training_config", "training_core", "training_model", "evaluate"]

[tool.ruff]
line-length = 100

'target-version' = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
